[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/font/Kenney Pixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/tutorial.png" type="Texture" id=3]
[ext_resource path="res://Assets/type icons/Artboard4_3.png" type="Texture" id=4]
[ext_resource path="res://Assets/type icons/Artboard4_4.png" type="Texture" id=5]
[ext_resource path="res://Assets/type icons/Artboard4.png" type="Texture" id=6]
[ext_resource path="res://Assets/type icons/Artboard4_2.png" type="Texture" id=7]
[ext_resource path="res://Assets/logo minimalista sem bg.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.956863, 0.921569, 0.780392, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.956863, 0.921569, 0.780392, 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.219608, 0.223529, 0.313726, 1 )

[node name="Play" type="Button" parent="."]
margin_left = 152.0
margin_top = 762.0
margin_right = 454.0
margin_bottom = 811.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 3 )
text = "Play"

[node name="HowToPlaybtn" type="Button" parent="."]
margin_left = 152.0
margin_top = 837.0
margin_right = 454.0
margin_bottom = 886.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "How to play"

[node name="Quit" type="Button" parent="."]
margin_left = 152.0
margin_top = 911.0
margin_right = 454.0
margin_bottom = 960.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Quit"

[node name="LogoMinimalistaSemBg" type="Sprite" parent="."]
position = Vector2( 1341, 356 )
texture = ExtResource( 8 )

[node name="HowToPlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.219608, 0.223529, 0.313726, 1 )

[node name="Tutorial" type="Sprite" parent="HowToPlay"]
position = Vector2( 925, 412 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="HowToPlay"]
anchor_right = 1.0
margin_top = 46.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 4 )
text = "Each card type goes on its respective biome. Amazônia goes on Amazônia, Caatinga goes on Caatinga and so on..."
align = 1
valign = 1

[node name="Label2" type="Label" parent="HowToPlay"]
anchor_right = 1.0
margin_top = 762.0
margin_bottom = 792.0
custom_fonts/font = SubResource( 4 )
text = "You also need to respect the food chain"
align = 1
valign = 1

[node name="Label3" type="Label" parent="HowToPlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -878.0
margin_top = 343.0
margin_right = -443.0
margin_bottom = 373.0
custom_fonts/font = SubResource( 4 )
text = "Goes on top of"
align = 1
valign = 1

[node name="Label4" type="Label" parent="HowToPlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -578.0
margin_top = 346.0
margin_right = -143.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 4 )
text = "Goes on top of"
align = 1
valign = 1

[node name="Label5" type="Label" parent="HowToPlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -233.0
margin_top = 346.0
margin_right = 202.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 4 )
text = "Goes on top of"
align = 1
valign = 1

[node name="Label6" type="Label" parent="HowToPlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 89.0
margin_top = 346.0
margin_right = 524.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 4 )
text = "Goes on top of"
align = 1
valign = 1

[node name="Label7" type="Label" parent="HowToPlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 434.0
margin_top = 346.0
margin_right = 869.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 4 )
text = "Goes on top of"
align = 1
valign = 1

[node name="Artboard42" type="Sprite" parent="HowToPlay"]
position = Vector2( 791, 960 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="Artboard43" type="Sprite" parent="HowToPlay"]
position = Vector2( 1093, 960 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Artboard44" type="Sprite" parent="HowToPlay"]
position = Vector2( 1439, 960 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="Artboard45" type="Sprite" parent="HowToPlay"]
position = Vector2( 133, 960 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="Artboard4" type="Sprite" parent="HowToPlay"]
position = Vector2( 454, 960 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="Artboard5" type="Sprite" parent="HowToPlay"]
position = Vector2( 1774, 960 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="Play2" type="Button" parent="HowToPlay"]
margin_left = 82.0
margin_top = 590.0
margin_right = 384.0
margin_bottom = 639.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
disabled = true
text = "Play"

[node name="BackMenu" type="Button" parent="HowToPlay"]
margin_left = 82.0
margin_top = 665.0
margin_right = 384.0
margin_bottom = 714.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
disabled = true
text = "Menu"

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="HowToPlaybtn" to="." method="_on_HowToPlaybtn_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Play3_pressed"]
[connection signal="pressed" from="HowToPlay/Play2" to="." method="_on_Play2_pressed"]
[connection signal="pressed" from="HowToPlay/BackMenu" to="." method="_on_BackMenu_pressed"]
